fixed footer newsletter signup on mobile devices

--- a/wp-content/themes/epik/assets/sass/_orig-styles.scss
+++ b/wp-content/themes/epik/assets/sass/_orig-styles.scss
@@ -474,7 +474,6 @@ tr.cart_item { background: #EEE; }
 
 /*! CUSTOM BODY WOOCOMMERCE-PAGE START [x23] ---------------------------------------- */
 
-body.woocommerce-page { background: #FFF; }
 body.woocommerce-page .content { font-size: 12px; }
 body.woocommerce-page .breadcrumb { margin:  0 30px 0 18px; }
 
